; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_transport.c_seg_rx_alloc.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_transport.c_seg_rx_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seg_rx = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.bt_mesh_net_rx = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32, i32, i32 }

@seg_rx = common dso_local global %struct.seg_rx* null, align 8
@.str = private unnamed_addr constant [38 x i8] c"New RX context. Block Complete 0x%08x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.seg_rx* (%struct.bt_mesh_net_rx*, i32*, i32*, i32)* @seg_rx_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.seg_rx* @seg_rx_alloc(%struct.bt_mesh_net_rx* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.seg_rx*, align 8
  %6 = alloca %struct.bt_mesh_net_rx*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.seg_rx*, align 8
  store %struct.bt_mesh_net_rx* %0, %struct.bt_mesh_net_rx** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %12

12:                                               ; preds = %78, %4
  %13 = load i32, i32* %10, align 4
  %14 = load %struct.seg_rx*, %struct.seg_rx** @seg_rx, align 8
  %15 = call i32 @ARRAY_SIZE(%struct.seg_rx* %14)
  %16 = icmp slt i32 %13, %15
  br i1 %16, label %17, label %81

17:                                               ; preds = %12
  %18 = load %struct.seg_rx*, %struct.seg_rx** @seg_rx, align 8
  %19 = load i32, i32* %10, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %18, i64 %20
  store %struct.seg_rx* %21, %struct.seg_rx** %11, align 8
  %22 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %23 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %17
  br label %78

27:                                               ; preds = %17
  %28 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %29 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %28, i32 0, i32 0
  store i32 1, i32* %29, align 4
  %30 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %31 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %30, i32 0, i32 10
  %32 = call i32 @net_buf_simple_reset(i32* %31)
  %33 = load %struct.bt_mesh_net_rx*, %struct.bt_mesh_net_rx** %6, align 8
  %34 = getelementptr inbounds %struct.bt_mesh_net_rx, %struct.bt_mesh_net_rx* %33, i32 0, i32 2
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %37 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %36, i32 0, i32 9
  store i32 %35, i32* %37, align 4
  %38 = load %struct.bt_mesh_net_rx*, %struct.bt_mesh_net_rx** %6, align 8
  %39 = getelementptr inbounds %struct.bt_mesh_net_rx, %struct.bt_mesh_net_rx* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %42 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %41, i32 0, i32 8
  store i32 %40, i32* %42, align 4
  %43 = load i32*, i32** %8, align 8
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %46 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %45, i32 0, i32 7
  store i32 %44, i32* %46, align 4
  %47 = load i32, i32* %9, align 4
  %48 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %49 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %48, i32 0, i32 6
  store i32 %47, i32* %49, align 4
  %50 = load i32*, i32** %7, align 8
  %51 = load i32, i32* %50, align 4
  %52 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %53 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %52, i32 0, i32 5
  store i32 %51, i32* %53, align 4
  %54 = load %struct.bt_mesh_net_rx*, %struct.bt_mesh_net_rx** %6, align 8
  %55 = getelementptr inbounds %struct.bt_mesh_net_rx, %struct.bt_mesh_net_rx* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 2
  %57 = load i32, i32* %56, align 4
  %58 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %59 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %58, i32 0, i32 4
  store i32 %57, i32* %59, align 4
  %60 = load %struct.bt_mesh_net_rx*, %struct.bt_mesh_net_rx** %6, align 8
  %61 = getelementptr inbounds %struct.bt_mesh_net_rx, %struct.bt_mesh_net_rx* %60, i32 0, i32 0
  %62 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 4
  %64 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %65 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %64, i32 0, i32 3
  store i32 %63, i32* %65, align 4
  %66 = load %struct.bt_mesh_net_rx*, %struct.bt_mesh_net_rx** %6, align 8
  %67 = getelementptr inbounds %struct.bt_mesh_net_rx, %struct.bt_mesh_net_rx* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %71 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %70, i32 0, i32 2
  store i32 %69, i32* %71, align 4
  %72 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  %73 = getelementptr inbounds %struct.seg_rx, %struct.seg_rx* %72, i32 0, i32 1
  store i32 0, i32* %73, align 4
  %74 = load i32, i32* %9, align 4
  %75 = call i32 @BLOCK_COMPLETE(i32 %74)
  %76 = call i32 @BT_DBG(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %75)
  %77 = load %struct.seg_rx*, %struct.seg_rx** %11, align 8
  store %struct.seg_rx* %77, %struct.seg_rx** %5, align 8
  br label %82

78:                                               ; preds = %26
  %79 = load i32, i32* %10, align 4
  %80 = add nsw i32 %79, 1
  store i32 %80, i32* %10, align 4
  br label %12

81:                                               ; preds = %12
  store %struct.seg_rx* null, %struct.seg_rx** %5, align 8
  br label %82

82:                                               ; preds = %81, %27
  %83 = load %struct.seg_rx*, %struct.seg_rx** %5, align 8
  ret %struct.seg_rx* %83
}

declare dso_local i32 @ARRAY_SIZE(%struct.seg_rx*) #1

declare dso_local i32 @net_buf_simple_reset(i32*) #1

declare dso_local i32 @BT_DBG(i8*, i32) #1

declare dso_local i32 @BLOCK_COMPLETE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
